[package]
name = "concordium-account-monitor"
authors = [ "Ian Johannesen <ij@perlpimp.net>" ]
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "agpl-3.0"

[dependencies]
tonic = "0.6.2"
prost = "0.9.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = { version = "1" }
anyhow = "1"
clap = { version = "3.0.13", features = ["derive"] }
warp = "0.3"
prometheus = "0.13.0"

[build-dependencies]
tonic-build = { version = "0.6.2", default-features = false, features = ["transport", "prost"] }

[profile.release]
opt-level = 3
debug = false
